WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183007
Web Automation: failed provisional loads cause "Navigate To" command to hang
https://bugs.webkit.org/show_bug.cgi?id=183007
Summary
Web Automation: failed provisional loads cause "Navigate To" command to hang
Blaze Burg
Reported
2018-02-21 10:49:31 PST
Looks like we forgot to add one hook a few years ago, and now it's revealed while debugging issues described here:
https://github.com/w3c/webdriver/issues/1232
Attachments
Proposed Fix
(2.07 KB, patch)
2018-02-21 11:00 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-02-21 10:49:46 PST
<
rdar://problem/37751819
>
Blaze Burg
Comment 2
2018-02-21 11:00:19 PST
Created
attachment 334393
[details]
Proposed Fix
WebKit Commit Bot
Comment 3
2018-02-21 11:41:08 PST
Comment on
attachment 334393
[details]
Proposed Fix Clearing flags on attachment: 334393 Committed
r228887
: <
https://trac.webkit.org/changeset/228887
>
WebKit Commit Bot
Comment 4
2018-02-21 11:41:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug